testing is done local reposistory

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>cv</title>
 </head>
 
 <body>
-    <form action="">
-        <input type="range">
-        <input type="date">
-    </form>
+    <div class="container">
+        <h1>First HTML Skeleton for Testing Purpose</h1>
+        <form action="">
+            <input type="range">
+            <input type="date">
+        </form>
+    </div>
 </body>
 
 </html>
